# image_manipulator

./: .gitignore  CMakeLists.txt  README.md  TODO  application.cpp  application.hpp  image_proc.cpp  main.cpp  window.cpp  window.hpp
include/: application.hpp  color_spaces.hpp  image_proc.hpp  macros.hpp  window.hpp
src/: application.cpp  bmp_generator.cpp  image_proc.cpp  main.cpp  window.cpp
